syntax = "proto3";

package inventory;

message ProductInventory {
    string product_id = 1;
    int64 quantity = 2;
}

message InventoryReservationEvent {
    string order_id = 1;
    string product_id = 2;
    string customer_id = 3;
    bool successful = 4;
}